# ironlayer

./: .dockerignore  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .trivyignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  install.sh  pyproject.toml
ai_engine/: .env.example  pyproject.toml
ai_engine/ai_engine/: __init__.py  config.py  main.py  middleware.py
ai_engine/ai_engine/engines/: __init__.py  budget_guard.py  cache.py  cost_anomaly.py  cost_forecaster.py  cost_predictor.py  failure_predictor.py  fragility_scorer.py  llm_client.py  pii_scrubber.py  prompts.py  risk_scorer.py  semantic_classifier.py  sql_optimizer.py  suggestion_validator.py
ai_engine/ai_engine/evaluation/: __init__.py  gold_dataset.py  metrics.py
ai_engine/ai_engine/ml/: __init__.py  cost_model.py  feature_extractor.py  model_registry.py
ai_engine/ai_engine/models/: __init__.py  requests.py  responses.py
ai_engine/ai_engine/routers/: __init__.py  cache.py  cost.py  fragility.py  optimize.py  predictions.py  risk.py  semantic.py
ai_engine/tests/: conftest.py  test_budget_guard.py  test_cache.py  test_config_validation.py  test_cost_anomaly.py  test_cost_forecaster.py  test_cost_predictor.py  test_evaluation_harness.py  test_failure_predictor.py  test_fragility_scorer.py  test_gold_dataset_regression.py  test_model_registry.py  test_pii_scrubber.py  test_semantic_classifier.py  test_sql_optimizer.py  test_suggestion_validator.py
api/: .env.example  LICENSE  pyproject.toml
api/api/: __init__.py  config.py  dependencies.py  main.py  schemas.py  security.py
api/api/middleware/: __init__.py  auth.py  body_limit.py  csp.py  csrf.py  json_formatter.py  logging.py  metering.py  prometheus.py  rbac.py  trace_context.py
api/api/routers/: __init__.py  approvals.py  audit.py  auth.py  billing.py  checks.py  customer_health.py  event_subscriptions.py  frontend_errors.py  metrics.py  models.py  plans.py  reconciliation.py  runs.py  simulation.py  tenant_config.py  webhooks.py
api/api/services/: __init__.py  ai_client.py  ai_feedback_service.py  analytics_service.py  audit_service.py  auth_service.py  auto_approval.py  check_service.py  customer_health_service.py  environment_service.py  execution_service.py  github_webhook_service.py  invoice_service.py  plan_service.py  quota_service.py  reconciliation_scheduler.py  reconciliation_service.py  reporting_service.py  team_service.py  webhook_dispatcher.py
api/tests/: conftest.py  test_admin_analytics_router.py  test_ai_feedback_service.py  test_analytics_service.py  test_auth_router.py  test_auth_service.py  test_auto_approval.py  test_backfill_checkpoint.py  test_billing_router.py  test_billing_service.py  test_customer_health_service.py  test_environment_router.py  test_environment_service.py  test_event_bus.py  test_event_subscription_router.py  test_execution_service.py  test_feature_gates.py  test_github_webhook_router.py  test_github_webhook_service.py  test_health_router.py  test_input_validation.py  test_invoice_router.py  test_invoice_service.py  test_json_formatter.py  test_metering_middleware.py  test_metering_wiring.py  test_models_router.py  test_plan_cache.py  test_plan_contracts.py  test_plan_service.py  test_plans_router.py  test_prometheus_middleware.py  test_quota_enforcement.py  test_quota_service.py  test_rate_limit.py  test_rbac.py  test_rbac_comprehensive.py  test_reconciliation.py  test_reconciliation_scheduler.py  test_report_export.py  (+17 more)
api/tests/integration/: test_tenant_isolation.py
cli/: README.md  pyproject.toml
cli/cli/: __init__.py  __main__.py  app.py  cloud.py  display.py  helpers.py  state.py
cli/cli/commands/: __init__.py  _helpers.py  apply.py  auth.py  backfill.py  check.py  dev.py  init.py  lineage.py  mcp.py  migrate.py  models.py  plan.py  show.py
cli/cli/mcp/: __init__.py  server.py  tools.py
cli/cli/templates/: config.yaml.j2  env.j2  gitignore.j2
cli/tests/: conftest.py  test_auth_commands.py  test_cli.py  test_cloud.py  test_dev.py  test_display.py  test_edge_cases.py  test_init.py  test_mcp_tools.py  test_migrate.py  test_migrate_sqlmesh.py
core_engine/: README.md  ironlayer_check_engine.pyi  pyproject.toml
core_engine/core_engine/: __init__.py  config.py
core_engine/core_engine/benchmarks/: __init__.py  graph_generator.py
core_engine/core_engine/contracts/: __init__.py  schema_validator.py
core_engine/core_engine/diff/: __init__.py  ast_diff.py  structural_diff.py
core_engine/core_engine/executor/: __init__.py  base.py  cluster_templates.py  databricks_executor.py  local_executor.py  retry.py  schema_introspector.py  sql_rewriter.py
core_engine/core_engine/git/: __init__.py  git_client.py
core_engine/core_engine/graph/: __init__.py  column_lineage.py  dag_builder.py
core_engine/core_engine/license/: __init__.py  feature_flags.py  keygen.py  license_manager.py
core_engine/core_engine/loader/: __init__.py  dbt_loader.py  framework_detector.py  model_loader.py  ref_resolver.py  sqlmesh_loader.py
core_engine/core_engine/metering/: __init__.py  events.py
core_engine/core_engine/models/: __init__.py  diff.py  model_definition.py  plan.py  run.py  snapshot.py  telemetry.py
core_engine/core_engine/parser/: __init__.py  normalizer.py  sql_guard.py
core_engine/core_engine/planner/: __init__.py  interval_planner.py  plan_serializer.py
core_engine/core_engine/simulation/: __init__.py  impact_analyzer.py
core_engine/core_engine/sql_toolkit/: __init__.py  _protocols.py  _registry.py  _types.py
core_engine/core_engine/state/: __init__.py  database.py  plan_repository.py  repository.py  run_repository.py  sqlite_adapter.py  tables.py
core_engine/core_engine/telemetry/: __init__.py  collector.py  emitter.py  kpi.py  privacy.py  profiling.py  retention.py  spark_metrics.py
core_engine/core_engine/testing/: __init__.py  test_runner.py
core_engine/tests/benchmark/: __init__.py  test_performance_benchmarks.py
core_engine/tests/e2e/: __init__.py  test_full_pipeline.py
core_engine/tests/unit/: test_ast_parser.py  (+18 more)
(+248 files in other folders)
