[project]
name = "ironlayer-workspace"
version = "0.1.0"
description = "AI-Native Databricks Transformation Control Plane"
requires-python = ">=3.11,<3.13"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.2",
    "mypy>=1.8",
]

[tool.uv.workspace]
members = ["core_engine", "ai_engine", "api", "cli"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = [
    "E501",   # line too long (handled by ruff format)
    "B008",   # function-call-in-default-argument (FastAPI Depends pattern)
    "B904",   # raise-without-from-inside-except (noisy in existing code)
    "UP042",  # replace-str-enum (keep compat with existing StrEnum pattern)
    "E402",   # module-import-not-at-top (intentional conditional imports)
    "SIM105", # suppressible-exception (contextlib.suppress preference)
    "SIM108", # if-else-block-instead-of-if-exp (readability preference)
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["N806", "N803"]
"tests/**/*.py" = ["N806", "N803"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "anthropic",
    "anthropic.*",
    "mcp",
    "mcp.*",
    "networkx",
    "networkx.*",
    "stripe",
    "stripe.*",
    "tomli",
    "tomli.*",
    "joblib",
    "joblib.*",
    "sklearn",
    "sklearn.*",
    "reportlab",
    "reportlab.*",
    "azure",
    "azure.*",
    "boto3",
    "boto3.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "*/tests/*"]
skips = ["B101"]

[tool.pytest.ini_options]
testpaths = ["core_engine/tests", "ai_engine/tests", "api/tests", "cli/tests"]
asyncio_mode = "auto"
addopts = "--cov=core_engine --cov=ai_engine --cov=api --cov=cli --cov-report=term-missing"
