[tool.poetry]
name = "ironlayer-api"
version = "0.1.0"
description = "IronLayer API Control Plane"
authors = ["IronLayer Team"]
license = "Apache-2.0"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = ">=0.109,<1.0"
uvicorn = {version = ">=0.27,<1.0", extras = ["standard"]}
pydantic = {version = ">=2.5,<3.0", extras = ["email"]}
pydantic-settings = ">=2.1,<3.0"
httpx = ">=0.27,<1.0"
stripe = ">=8.0,<10.0"
prometheus-client = ">=0.20,<1.0"
bcrypt = ">=4.1,<5.0"
PyJWT = ">=2.8,<3.0"
ironlayer-core = {path = "../core_engine", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=4.1"
pytest-asyncio = ">=0.23"
httpx = ">=0.27"
ruff = ">=0.2"
black = ">=24.0"
mypy = ">=1.8"
ai-engine = {path = "../ai_engine", develop = true}

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=api --cov-report=term-missing"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"
