[tool.poetry]
name = "ironlayer"
version = "0.2.0"
description = "IronLayer CLI — AI-native Databricks transformation control plane"
authors = ["IronLayer Team"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://ironlayer.app"
repository = "https://github.com/ironlayer/ironlayer"
documentation = "https://docs.ironlayer.app"
keywords = ["sql", "databricks", "data-engineering", "transformations", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
packages = [{include = "cli"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
typer = ">=0.9,<1.0"
rich = ">=13.0,<14.0"
httpx = ">=0.27,<1.0"
jinja2 = ">=3.1,<4.0"
# Local dev: path dependency. CI publish swaps to: ironlayer-core = ">=0.1.0"
ironlayer-core = {path = "../core_engine", develop = true}
# MCP support is optional — install with: pip install ironlayer[mcp]
mcp = {version = ">=1.0,<2.0", optional = true}
starlette = {version = ">=0.27,<1.0", optional = true}
uvicorn = {version = ">=0.27,<1.0", optional = true}

[tool.poetry.extras]
mcp = ["mcp", "starlette", "uvicorn"]

[tool.poetry.scripts]
ironlayer = "cli.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=4.1"
ruff = ">=0.2"
black = ">=24.0"
mypy = ">=1.8"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=cli --cov-report=term-missing"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"
