[project]
name = "ironlayer-core"
version = "0.3.0"
description = "IronLayer Core Engine — deterministic SQL transformation planning and execution"
requires-python = ">=3.11,<3.13"
license = "Apache-2.0"
readme = "README.md"
authors = [{name = "IronLayer Team"}]
keywords = ["sql", "databricks", "data-engineering", "transformations", "incremental"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
]
dependencies = [
    "sqlglot>=25.34,<27",  # Range: sqlglot is still MIT-licensed post-Fivetran; cap at <27 for API stability
    "networkx>=3.2,<4.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "psycopg[binary]>=3.1,<4.0",
    "asyncpg>=0.29,<1.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.1,<3.0",
    "duckdb>=1.1,<2.0",
    "databricks-sdk>=0.30,<1.0",
    "rich>=13.0,<14.0",
    "cryptography>=46.0.5,<47.0",
    "aiosqlite>=0.20,<1.0",
    "pyyaml>=6.0,<7.0",
]

[project.urls]
Homepage = "https://ironlayer.app"
Repository = "https://github.com/ironlayer/ironlayer"
Documentation = "https://docs.ironlayer.app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.2",
    "mypy>=1.8",
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
# Path to the Rust crate for the check engine extension module.
manifest-path = "../check_engine/Cargo.toml"
# Python packages to include alongside the compiled Rust extension.
python-packages = ["core_engine"]
# Module name matches the Rust crate lib name.
module-name = "ironlayer_check_engine"
# Bindings type.
bindings = "pyo3"
# Use stable ABI for a single wheel per platform.
features = ["pyo3/abi3-py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=core_engine --cov-report=term-missing"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N806", "N803"]
